<resources>
    <string name="app_name">FTP File Manager</string>


    <string name="file_icon">File icon</string>

    <string name="connect_as">Connect as:</string>
    <string name="remember_pass_01">Forgot password immediately</string>
    <string name="remember_pass_02">Remember until logout</string>
    <string name="remember_pass_03">Remember forever</string>
    <string name="connect_as_anonymous">Anonymous</string>
    <string name="connect_as_registered">Registered user</string>

    <string name="btn_connect">Connect</string>

    <string name="fs_unit_bytes">%1$.02f %2$s</string>

    <!-- Helper text-->
    <string name="helper_name">Any name to recognize later</string>
    <string name="hint_name">Connection Name</string>
    <string name="helper_host">Enter server address</string>
    <string name="hint_host">Host</string>
    <string name="helper_port">Default is 21</string>
    <string name="hint_port">Port</string>
    <string name="helper_username">Enter username</string>
    <string name="hint_username">Username</string>
    <string name="helper_password">Enter password</string>
    <string name="hint_password">Password</string>

    <!-- File Types -->
    <string name="file_generic">File</string>
    <string name="file_apk">Android Application</string>
    <string name="file_image">Image File</string>
    <string name="file_video">Video File</string>
    <string name="file_audio">Audio File</string>
    <string name="file_pdf">Portable Document Format</string>
    <string name="file_doucment">Document</string>
    <string name="file_exe">Windows Executable</string>
    <string name="file_shell">Shell Script</string>
    <string name="file_gif">Graphics Interchange Format</string>
    <string name="file_db">Database File</string>
    <string name="file_key">Key File</string>
    <string name="file_torrent">Torrent File</string>
    <string name="file_archive">Compressed Archive</string>
    <string name="file_html">Hypertext Markup Language</string>
    <string name="file_css">Cascading Style Sheets</string>
    <string name="file_js">JavaScript</string>
    <string name="file_php">PHP: Hypertext Preprocessor</string>
    <string name="file_py">Python</string>
    <string name="file_lua">Lua Script</string>
    <string name="file_mk">Makefile</string>
    <string name="file_npm">Node Package Manager</string>
    <string name="file_cert">Certificate</string>
    <string name="file_json">JavaScript Object Notation</string>

    <string name="confirm_download">Download confirmation</string>
    <string name="confirm_delete">Delete confirmation</string>
    <string name="confirm_upload">Upload confirmation</string>

    <string name="option_rename">Rename</string>
    <string name="option_delete">Delete</string>
    <string name="option_download">Download</string>

    <string name="channel_name">FTP File Manager Download</string>
    <string name="channel_description">Shows download notification</string>

    <string name="alert_info_message">Permissions: %1$s\nOwner: %2$s\nGroup: %3$s\nSize: %4$.02f %5$s\nDate: %6$s\nTime: %7$s\nPath: %8$s\nType: %9$s</string>

    <string name="permission_storage_rationale">Storage permissions are needed to download and save a file.</string>
    <string name="permission_storage_button">Ok</string>
    <string name="permission_storage_granted">Storage permissions granted</string>
    <string name="permission_storage_denied">Can\'t download file: storage permission denied</string>

    <string name="btn_desc_info">Info</string>
    <string name="main_option_connection_title">Connections</string>
    <string name="main_option_connection_desc">Manage your connections</string>

    <string name="toolbar_info">Info</string>
    <string name="toolbar_close">Close</string>
    <string name="toolbar_save">Save</string>

    <string name="str_developer">Developed with ❤ by chankruze</string>

    <string name="desc_notification_icon">Notification Icon</string>
</resources>
