<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/option_info"
        android:icon="@drawable/ic_info"
        android:iconTint="@color/colorPrimary"
        android:title="@string/toolbar_info"/>

    <item
        android:id="@+id/option_rename"
        android:icon="@drawable/ic_edit"
        android:iconTint="@color/colorPrimary"
        android:title="@string/option_rename"/>

    <item
        android:id="@+id/option_delete"
        android:icon="@drawable/ic_trash"
        android:iconTint="@color/colorPrimary"
        android:title="@string/option_delete"/>

    <item
        android:id="@+id/option_download"
        android:icon="@drawable/ic_download"
        android:iconTint="@color/colorPrimary"
        android:title="@string/option_download"/>
</menu>