<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/InputLayoutStyle"
            android:hint="@string/hint_name"
            app:helperText="@string/helper_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edit_name"
                style="@style/InputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_hard_drive" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Server Details" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/host_layout"
            style="@style/InputLayoutStyle"
            android:hint="@string/hint_host"
            app:helperText="@string/helper_host">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edit_host"
                style="@style/InputEditText"
                android:digits="._-0123456789qwertzuiopasdfghjklyxcvbnm" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_layout"
            style="@style/InputLayoutStyle"
            android:hint="@string/hint_port"
            app:counterMaxLength="5"
            app:helperText="@string/helper_port">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_edit_port"
                style="@style/InputEditText"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_people" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="User Details" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:text="@string/connect_as" />

            <RadioGroup
                android:id="@+id/radio_connection_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/connection_registered"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/connection_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_as_registered" />

                <RadioButton
                    android:id="@+id/connection_anonymous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_as_anonymous" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                style="@style/InputLayoutStyle"
                android:hint="@string/hint_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_username"
                    style="@style/InputEditText" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/InputLayoutStyle"
                android:hint="@string/hint_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_password"
                    style="@style/InputEditText"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>